refacto: remove resume-campaign-banner

--- a/mon-pix/app/templates/profile.hbs
+++ b/mon-pix/app/templates/profile.hbs
@@ -3,7 +3,7 @@
 <BurgerMenu @animation="push" @translucentOverlay={{true}} as |burger|>
   <burger.outlet>
 
-    <NavbarHeader @burger={{burger}} @campaignParticipations={{@model.campaignParticipations}}/>
+    <NavbarHeader @burger={{burger}}/>
 
     <ProfileContent @model={{@model}} />
 
