--- a/orga/app/styles/pages/authenticated/certifications.scss
+++ b/orga/app/styles/pages/authenticated/certifications.scss
@@ -1,18 +1,10 @@
-.certifications-layout {
-  display: flex;
-}
-
 .certifications-page {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  padding: 16px 0 0 16px;
   width: 100%;
   margin-bottom: 20px;
-
-  &__header {
-    display: flex;
-    margin: 1em 0em 0em 1em;
-  }
 
   &__tabs {
     display: flex;
@@ -22,42 +14,30 @@
 
   &__text {
     font-family: $roboto;
-    margin: 2px 0 32px 16px;
-    font-size: 16px;
+    margin: 2px 0 32px 0;
+    font-size: 1rem;
     line-height: 1.375rem;
-    p {
-      margin: 0;
-    }
   }
 
   &__action {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
-    width: 100%;
-    margin-left: 1rem;
+    flex-wrap: wrap;
+    align-items: center;
+    min-width: 100%;
 
     button {
       height: 36px;
       line-height: 36px;
+      margin-left: 8px;
     }
 
-    .certifications-page-action {
-
-      &__select-container {
-
-        label[for^="certifications-page-action__select"] {
-          font-size: 14px;
-          color: $grey-90;
-          margin-left: 2px;
-        }
-
-        .pix-select {
-          margin: 4px 24px 0 0;
-          width: 153px;
-          height: 36px;
-        }
-      }
+    label {
+      font-size: 0.875rem;
+      color: $grey-90;
+      margin-left: 2px;
+      min-width: 100%;
+      padding: 4px 0;
     }
   }
 }
