--- a/mon-pix/app/templates/components/qcu-solution-panel.hbs
+++ b/mon-pix/app/templates/components/qcu-solution-panel.hbs
@@ -1,7 +1,7 @@
-<div class="qcu-panel qcu-panel-solution rounded-panel rounded-panel__row">
+<div class="qcu-solution-panel rounded-panel rounded-panel__row">
   {{#each this.labeledRadios as |labeledItemRadio index|}}
-    <p class="qcu-panel-solution__proposal-item">
-      <span class="qcu-panel-solution__radio-button">
+    <p class="qcu-solution-panel__proposal-item">
+      <span class="qcu-solution-panel__radio-button">
         {{#if labeledItemRadio.[1]}}
           <svg width="18px" height="18px" viewBox="0 0 18 18"
                version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -20,7 +20,7 @@
           </svg>
         {{/if}}
       </span>
-      <MarkdownToHtml @class="qcu-panel-solution__proposition"
+      <MarkdownToHtml @class="qcu-solution-panel__proposition"
                       data-goodness="{{if (get this.solutionArray (concat index)) 'good' 'bad'}}"
                       data-checked={{if labeledItemRadio.[1] 'yes' 'no'}}
                       @markdown="{{labeledItemRadio.[0]}}" />
