--- a/admin/app/components/target-profiles/stages.hbs
+++ b/admin/app/components/target-profiles/stages.hbs
@@ -9,6 +9,7 @@
             <th class="stages-table__threshold">Threshold</th>
             <th class="stages-table__title">Titre</th>
             <th>Message</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -44,6 +45,17 @@
                    @value={{stage.message}} />
                 {{else}}
                   {{stage.message}}
+                {{/if}}
+              </td>
+              <td>
+                {{#if stage.isNew}}
+                  <PixButton class="stages-remove-stage"
+                             @backgroundColor="transparent"
+                             @border="squircle-small"
+                             aria-label="Supprimer palier"
+                             @triggerAction={{fn this.removeNewStage stage}}>
+                    <FaIcon @icon="minus"></FaIcon>
+                  </PixButton>
                 {{/if}}
               </td>
             </tr>
