--- a/mon-pix/app/components/dashboard/content.hbs
+++ b/mon-pix/app/components/dashboard/content.hbs
@@ -1,16 +1,18 @@
 <section class="page-container dashboard-content">
   <h1 class="sr-only">{{t 'pages.dashboard.title'}}</h1>
 
-  {{#unless this.hasUserSeenNewDashboardInfo}}
+  {{#if this.hasNewInformationToShow}}
     <section class="dashboard-content__banner" data-test-new-dashboard-info>
-      <NewInformation @information="{{t 'pages.dashboard.presentation.message' firstname=this.userFirstname}}"
-                      @image="/images/illustrations/discovery_TDB_pix.svg"
-                      @backgroundColorClass="new-information--blue-gradient-background"
-                      @textColorClass="new-information--white-text"
-                      @linkText="{{this.newDashboardInfoLink.text}}"
-                      @linkTo="{{this.newDashboardInfoLink.url}}"
-                      @closeaction={{this.closeInformationAboutNewDashboard}}
-      />
+      {{#unless this.hasUserSeenNewDashboardInfo}}
+        <NewInformation @information="{{t 'pages.dashboard.presentation.message' firstname=this.userFirstname}}"
+                        @image="/images/illustrations/discovery_TDB_pix.svg"
+                        @backgroundColorClass="new-information--blue-gradient-background"
+                        @textColorClass="new-information--white-text"
+                        @linkText="{{this.newDashboardInfoLink.text}}"
+                        @linkTo="{{this.newDashboardInfoLink.url}}"
+                        @closeaction={{this.closeInformationAboutNewDashboard}}
+        />
+      {{/unless}}
       {{#if this.profileCollectionCampaignParticipationCode}}
         <NewInformation @information="{{t 'pages.dashboard.campaigns.resume' }}"
                         @image="/images/profile_collect_TDB_pix.svg"
@@ -23,7 +25,7 @@
         />
       {{/if}}
     </section>
-  {{/unless}}
+  {{/if}}
 
   <section class="dashboard-content__score">
     <div class="dashboard-content-score__wrapper">
@@ -33,16 +35,18 @@
   </section>
 
   <section class="dashboard-content__main">
-    {{#unless this.hasUserSeenNewDashboardInfo}}
+    {{#if this.hasNewInformationToShow}}
       <section class="dashboard-content-main__banner">
-        <NewInformation @information="{{t 'pages.dashboard.presentation.message' firstname=this.userFirstname}}"
-                        @image="/images/illustrations/discovery_TDB_pix.svg"
-                        @backgroundColorClass="new-information--blue-gradient-background"
-                        @textColorClass="new-information--white-text"
-                        @linkText="{{this.newDashboardInfoLink.text}}"
-                        @linkTo="{{this.newDashboardInfoLink.url}}"
-                        @closeaction={{this.closeInformationAboutNewDashboard}}
-        />
+        {{#unless this.hasUserSeenNewDashboardInfo}}
+          <NewInformation @information="{{t 'pages.dashboard.presentation.message' firstname=this.userFirstname}}"
+                          @image="/images/illustrations/discovery_TDB_pix.svg"
+                          @backgroundColorClass="new-information--blue-gradient-background"
+                          @textColorClass="new-information--white-text"
+                          @linkText="{{this.newDashboardInfoLink.text}}"
+                          @linkTo="{{this.newDashboardInfoLink.url}}"
+                          @closeaction={{this.closeInformationAboutNewDashboard}}
+          />
+        {{/unless}}
         {{#if this.profileCollectionCampaignParticipationCode}}
           <NewInformation @information="{{t 'pages.dashboard.campaigns.resume' }}"
                           @image="/images/profile_collect_TDB_pix.svg"
@@ -55,7 +59,7 @@
           />
         {{/if}}
       </section>
-    {{/unless}}
+    {{/if}}
 
     {{#if this.hasNothingToShow}}
     <section class="dashboard-content__section" data-test-empty-dashboard>
