--- a/admin/app/components/target-profiles/stages.hbs
+++ b/admin/app/components/target-profiles/stages.hbs
@@ -1,6 +1,11 @@
 <div class="content-text content-text--small">
   <form class="form" {{on "submit" this.createStages}}>
     {{#if this.hasStages}}
+      {{#if this.displayNoThresholdZero}}
+        <PixMessage @type='warning'>
+          Attention ! Il n'y a pas de palier à 0
+        </PixMessage>
+      {{/if}}
       <div class="table-admin">
         <table>
           <thead>
