Remove the margin bottom on form field

--- a/admin/app/components/target-profiles/stages.hbs
+++ b/admin/app/components/target-profiles/stages.hbs
@@ -7,7 +7,7 @@
         </PixMessage>
       {{/if}}
       <div class="table-admin">
-        <table>
+        <table class="stages-table">
           <thead>
             <tr>
               <th class="stages-table__id">ID</th>
