Reduce the size of the actions column

--- a/admin/app/components/target-profiles/stages.hbs
+++ b/admin/app/components/target-profiles/stages.hbs
@@ -15,7 +15,7 @@
               <th class="stages-table__threshold">Threshold</th>
               <th class="stages-table__title">Titre</th>
               <th>Message</th>
-              <th>Actions</th>
+              <th class="stages-table__actions">Actions</th>
             </tr>
           </thead>
           <tbody>
