[ORGA] Display tooltip with prescriber title and/or description

--- a/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
@@ -40,6 +40,8 @@
                   <StageStars
                     @result={{participation.masteryPercentage}}
                     @stages={{@campaign.stages}}
+                    @withTooltip={{true}}
+                    @tooltipPosition="bottom-left"
                   />
                 {{else}}
                   <span class="participant-list__mastery-percentage">
