--- a/admin/app/styles/components/target-profiles/stages.scss
+++ b/admin/app/styles/components/target-profiles/stages.scss
@@ -20,8 +20,13 @@
   }
 
   &__actions {
-    width: 100px;
+    width: 134px;
   }
+
+  .btn {
+    font-size: 0.9rem;
+  }
+  
 }
 .stages-table .form-field {
   margin-bottom: 0;
