[ORGA] Update login templates with translation keys

--- a/orga/app/templates/login.hbs
+++ b/orga/app/templates/login.hbs
@@ -3,7 +3,7 @@
     <div class="panel__image">
       <img src="/pix-orga.svg" alt="Pix Orga">
     </div>
-    <h3 class="form-title">Connectez-vous</h3>
+    <h3 class="form-title">{{t 'pages.login.title'}}</h3>
     <Routes::LoginForm @isWithInvitation={{false}} @hasInvitationError={{this.hasInvitationError}} />
   </div>
 </div>
