--- a/orga/app/components/routes/authenticated/campaign/assessment/details.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/details.hbs
@@ -61,7 +61,12 @@
           </li>
           {{#if @campaign.hasStages}}
             <li aria-label={{t 'pages.assessment-individual-results.stages.label'}} class="panel-header-data__content panel-header-data-content__stages">
-              <StageStars @result={{@campaignAssessmentParticipation.masteryPercentage}} @stages={{@campaign.stages}}/>
+              <StageStars
+                @result={{@campaignAssessmentParticipation.masteryPercentage}}
+                @stages={{@campaign.stages}}
+                @withTooltip={{true}}
+                @tooltipPosition="bottom-left"
+              />
             </li>
           {{else}}
             <li class="panel-header-data__content value-text value-text--highlight panel-header-data-content__mastery-percentage">
