bsr: make new information BEM compliant

--- a/mon-pix/app/styles/components/_new-information.scss
+++ b/mon-pix/app/styles/components/_new-information.scss
@@ -115,40 +115,40 @@
       margin: 0;
     }
   }
+}
 
-  &-text {
+.new-information-content-text {
 
-    &__button {
-      margin: auto;
-      margin-top: 20px;
-      padding: 10px 20px;
-      display: inline-table;
+  &__button {
+    margin: auto;
+    margin-top: 20px;
+    padding: 10px 20px;
+    display: inline-table;
 
-      @include device-is('tablet') {
-        margin: 0;
-      }
+    @include device-is('tablet') {
+      margin: 0;
+    }
+  }
+
+  &__link {
+    display: none;
+    margin-top: 14px;
+    font-size: 0.875rem;
+    font-weight: $font-normal;
+    letter-spacing: 0.009rem;
+    line-height: 1.375rem;
+
+    .fa-arrow-right {
+      margin-right: 5px;
     }
 
-    &__link {
-      display: none;
-      margin-top: 14px;
-      font-size: 0.875rem;
-      font-weight: $font-normal;
-      letter-spacing: 0.009rem;
-      line-height: 1.375rem;
+    @include device-is('desktop') {
+      display: inline-table;
+    }
 
-      .fa-arrow-right {
-        margin-right: 5px;
-      }
-
-      @include device-is('desktop') {
-        display: inline-table;
-      }
-
-      &:focus span,
-      &:hover span {
-        border-bottom: 1px solid $white;
-      }
+    &:focus span,
+    &:hover span {
+      border-bottom: 1px solid $white;
     }
   }
 }
