[ORGA] Add translations for team-items page

--- a/orga/app/components/dropdown/icon-trigger.hbs
+++ b/orga/app/components/dropdown/icon-trigger.hbs
@@ -1,7 +1,7 @@
 <div id="icon-trigger" class="dropdown" ...attributes>
   <PixIconButton
     @icon={{@icon}}
-    aria-label="Afficher les actions"
+    aria-label="{{t 'dropdown.arial-label'}}"
     class="{{@dropdownButtonClass}}"
     @triggerAction={{this.toggle}}
     @size="small"
