--- a/orga/app/templates/authenticated/certifications.hbs
+++ b/orga/app/templates/authenticated/certifications.hbs
@@ -3,6 +3,10 @@
   <p class="certifications-page__text">
     {{t 'pages.certifications.description'}}
   </p>
+  <PixMessage>
+    {{t 'pages.certifications.documentation-link-notice'}}
+    <a href="https://cloud.pix.fr/s/cRaeKT4ErrXs4X8">{{t 'pages.certifications.documentation-link-label'}}</a>
+  </PixMessage>
   <form class="certifications-page__action" {{on 'submit' this.downloadSessionResultFile}}>
     <label for="certifications-page-action__select">{{t 'pages.certifications.select-label'}}</label>
     <PixSelect id="certifications-page-action__select" 
@@ -12,7 +16,9 @@
       @isSearchable={{true}}
       @isValidationActive={{true}}
       placeholder={{this.firstTwoDivisions}}
-      required={{true}} />
+      required={{true}}
+      autocomplete="off"
+    />
     <button class="button" type="submit">
       {{t 'pages.certifications.download-button'}}
     </button>
