--- a/orga/app/styles/pages/authenticated/certifications.scss
+++ b/orga/app/styles/pages/authenticated/certifications.scss
@@ -16,7 +16,8 @@
     font-family: $roboto;
     margin: 2px 0 32px 0;
     font-size: 1rem;
-    line-height: 1.375rem;
+    line-height: 1.45rem;
+    color: $grey-60;
   }
 
   &__action {
@@ -25,20 +26,24 @@
     flex-wrap: wrap;
     align-items: center;
     min-width: 100%;
+    margin-bottom: 40px;
 
     button {
-      height: 36px;
+      height: 44px;
       line-height: 36px;
       margin-left: 8px;
     }
 
     label {
-      font-size: 0.875rem;
       color: $grey-90;
       margin-left: 2px;
       min-width: 100%;
       padding: 4px 0;
     }
+  }
+
+  .pix-message {
+    width: max-content;
   }
 }
 
