--- a/mon-pix/app/templates/components/qcu-solution-panel.hbs
+++ b/mon-pix/app/templates/components/qcu-solution-panel.hbs
@@ -27,13 +27,13 @@
     </p>
   {{/each}}
 
-  <div class="qcu-panel-proposals__answer-feedback">
+  <div class="qcu-solution-panel__answer-feedback">
     {{#if this.isAnswerValid}}
-      <div class="answer-feedback__correct-answer">{{t 'pages.comparison-window.results.feedback.correct'}}</div>
+      <div class="qcu-solution-answer-feedback__correct-answer">{{t 'pages.comparison-window.results.feedback.correct'}}</div>
     {{else}}
-      <div class="answer-feedback__wrong-answer">{{t 'pages.comparison-window.results.feedback.wrong' htmlSafe=true}}
-        <strong class="wrong-answer__expected-answer">{{this.solutionAsText}}</strong>
-      </div>
+      <MarkdownToHtml
+              class="qcu-solution-answer-feedback__expected-answer"
+              @markdown="{{t 'pages.comparison-window.results.feedback.wrong' htmlSafe=true}} {{this.solutionAsText}}" />
     {{/if}}
   </div>
 </div>
