[ORGA] Make certifications page more responsive

--- a/orga/app/styles/pages/authenticated/certifications.scss
+++ b/orga/app/styles/pages/authenticated/certifications.scss
@@ -1,7 +1,6 @@
 .certifications-page {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
   padding: 16px 0 0 16px;
   width: 100%;
   margin-bottom: 20px;
@@ -28,22 +27,30 @@
     min-width: 100%;
     margin-bottom: 40px;
 
-    button {
-      height: 44px;
-      line-height: 36px;
-      margin-left: 8px;
-    }
-
     label {
       color: $grey-90;
       margin-left: 2px;
       min-width: 100%;
       padding: 4px 0;
     }
+
+    .pix-select {
+      margin-right: 8px;
+      margin-bottom: 6px;
+    }
+
+    button {
+      height: inherit;
+      min-height: 44px;
+      line-height: inherit;
+      padding: 8px 20px;
+      margin-bottom: 6px;
+    }
+
   }
 
   .pix-message {
-    width: max-content;
+    max-width: max-content;
   }
 }
 
