[ADMIN] Open sessions to be published by default

--- a/admin/app/components/menu-bar.hbs
+++ b/admin/app/components/menu-bar.hbs
@@ -24,7 +24,7 @@
     </li>
     <li class="menu-bar__entry">
       <PixTooltip @text='Sessions de certifications' @position='right' @inline={{true}}>
-        <LinkTo @route="authenticated.sessions.list" class="menu-bar__link menu-bar__link--sessions">
+        <LinkTo @route="authenticated.sessions.list.to-be-published" class="menu-bar__link menu-bar__link--sessions">
           <FaIcon @icon="chalkboard-teacher"></FaIcon>
         </LinkTo>
       </PixTooltip>
