[ORGA] Translate dialog close button aria-label

--- a/orga/app/components/modal/dialog.hbs
+++ b/orga/app/components/modal/dialog.hbs
@@ -14,7 +14,7 @@
         </h2>
         <PixIconButton
           @icon="times"
-          aria-label="Fermer la fenêtre"
+          aria-label="{{t 'common.actions.close'}}"
           @triggerAction={{@close}}
           @withBackground={{false}}
           class="modal-header__icon"
