--- a/mon-pix/app/components/campaign-participation-overview/card/ended.hbs
+++ b/mon-pix/app/components/campaign-participation-overview/card/ended.hbs
@@ -9,7 +9,7 @@
     <strong class="campaign-participation-overview-card-header__subtitle">{{@model.campaignTitle}}</strong>
     <time class="campaign-participation-overview-card-header__date"
           datetime="{{@model.sharedAt}}">
-      {{t 'pages.campaign-participation-overview.card.finished-at' date=(format-date @model.sharedAt)}}
+      {{t 'pages.campaign-participation-overview.card.finished-at' date=(moment-format @model.sharedAt 'DD/MM/YYYY')}}
     </time>
   </header>
   <section class="campaign-participation-overview-card-content">
