[APP] BSR - Fix english version for date in letters
Ex : 3 June 2020 instead of June 3, 2020

--- a/mon-pix/app/templates/campaigns/profiles-collection/profile-already-shared.hbs
+++ b/mon-pix/app/templates/campaigns/profiles-collection/profile-already-shared.hbs
@@ -7,7 +7,7 @@
     <div class="send-profile-header__announcement">
       <img class="send-profile-header__image" src="{{rootURL}}/images/illustrations/fat-bee.svg" alt={{t "pages.profile-already-shared.first-title"}}>
       <p class="send-profile-header__instruction">
-        {{t "pages.profile-already-shared.explanation" organization=this.model.campaign.organizationName date=this.model.sharedProfile.sharedAt hour=this.model.sharedProfile.sharedAt htmlSafe=true}}
+        {{t "pages.profile-already-shared.explanation" organization=this.model.campaign.organizationName date=(moment-format this.model.sharedProfile.sharedAt 'D MMMM YYYY') hour=this.model.sharedProfile.sharedAt htmlSafe=true}}
       </p>
       <LinkTo @route="index" class="skill-review-share__back-to-home link">
         {{t "pages.profile-already-shared.actions.continue"}}
