[ORGA] translate pix-loader

--- a/orga/app/components/pix-loader.hbs
+++ b/orga/app/components/pix-loader.hbs
@@ -1,8 +1,8 @@
 <div class="app-loader">
     <p class="app-loader__image">
-      <img src="/images/interwind.gif" alt="Chargement…">
+      <img src="/images/interwind.gif" alt="" role="presentation">
     </p>
     <p class="app-loader__text">
-        En cours de chargement...
+      {{t "common.loading"}}
     </p>
 </div>
